--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,17 @@
 {
-    "name": "tikang/test",
-    "version": "1.0.0",
+    "name": "taein/php-study",
     "autoload": {
         "psr-4": {
-            "Test\\": "classes/"
+            "Taein\\PhpStudy\\": "src/"
         }
     },
+    "authors": [
+        {
+            "name": "Taein",
+            "email": "taein.k0103@gmail.com"
+        }
+    ],
     "require": {
-        "vlucas/phpdotenv": "^5.6"
-}
+        "vlucas/phpdotenv": "*"
+    }
 }
