--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
-    "name": "taein/php-study",
+    "name": "tikang/test",
     "autoload": {
         "psr-4": {
-            "Taein\\PhpStudy\\": "src/"
+            "Test\\": "classes/"
         }
     },
-    "authors": [
-        {
-            "name": "Taein",
-            "email": "taein.k0103@gmail.com"
-        }
-    ],
+    "version": "1.0.0",
     "require": {
-        "vlucas/phpdotenv": "*"
+      "ext-pdo": "*",
+        "nesbot/carbon": "^3.8",
+        "carbonphp/carbon-doctrine-types": "^3.2",
+        "vlucas/phpdotenv": "^5.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
     }
 }
