--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "tikang/test",
     "autoload": {
         "psr-4": {
-            "Test\\": "classes/"
+            "Test\\": "classes/",
+            "ApiTest\\": "src/"
         }
     },
     "version": "1.0.0",
@@ -10,7 +11,8 @@
       "ext-pdo": "*",
         "nesbot/carbon": "^3.8",
         "carbonphp/carbon-doctrine-types": "^3.2",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "guzzlehttp/guzzle": "^7.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5"
