--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "psr-4": {
             "ApiTest\\": "src/",
-            "ApiTest\\Exception\\": "src/Exception/"
+            "ApiTest\\Exception\\": "src/Exception/",
+            "ApiTest\\Tests\\": "tests/"
         }
     },
     "require": {
@@ -12,6 +13,7 @@
         "laravel/framework": "^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.5"
+        "phpunit/phpunit": "^11.5",
+        "phpunit/php-code-coverage": "^11.0"
     }
 }
